// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tasks render Tasks component with empty array 1`] = `
<div>
  <div
    class="MuiPaper-root WithStyles(ForwardRef(Paper))-root makeStyles-paper MuiPaper-outlined MuiPaper-rounded"
  >
    <div
      class="makeStyles-paperHeader"
    >
      <h6
        class="MuiTypography-root makeStyles-subtitle MuiTypography-subtitle1"
      >
        Задачи (
        0
        )
      </h6>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root makeStyles-select"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
          role="button"
          tabindex="0"
        >
          Все задачи
        </div>
        <input
          type="hidden"
          value="Все задачи"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
      <hr
        class="MuiDivider-root makeStyles-divider"
      />
    </div>
    <div
      class="makeStyles-taskWrapper"
    />
  </div>
</div>
`;

exports[`Tasks render Tasks component with one task 1`] = `
<div>
  <div
    class="MuiPaper-root WithStyles(ForwardRef(Paper))-root makeStyles-paper MuiPaper-outlined MuiPaper-rounded"
  >
    <div
      class="makeStyles-paperHeader"
    >
      <h6
        class="MuiTypography-root makeStyles-subtitle MuiTypography-subtitle1"
      >
        Задачи (
        1
        )
      </h6>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root makeStyles-select"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
          role="button"
          tabindex="0"
        >
          Все задачи
        </div>
        <input
          type="hidden"
          value="Все задачи"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
      <hr
        class="MuiDivider-root makeStyles-divider"
      />
    </div>
    <div
      class="makeStyles-taskWrapper"
    >
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-expansion MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorError"
          >
            0
          </h6>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Tasks render Tasks component with tasks array 1`] = `
<div>
  <div
    class="MuiPaper-root WithStyles(ForwardRef(Paper))-root makeStyles-paper MuiPaper-outlined MuiPaper-rounded"
  >
    <div
      class="makeStyles-paperHeader"
    >
      <h6
        class="MuiTypography-root makeStyles-subtitle MuiTypography-subtitle1"
      >
        Задачи (
        10
        )
      </h6>
      <div
        class="MuiInputBase-root MuiOutlinedInput-root makeStyles-select"
      >
        <div
          aria-haspopup="listbox"
          class="MuiSelect-root MuiSelect-select MuiSelect-selectMenu MuiSelect-outlined MuiInputBase-input MuiOutlinedInput-input"
          role="button"
          tabindex="0"
        >
          Все задачи
        </div>
        <input
          type="hidden"
          value="Все задачи"
        />
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSelect-icon MuiSelect-iconOutlined"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M7 10l5 5 5-5z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
      <hr
        class="MuiDivider-root makeStyles-divider"
      />
    </div>
    <div
      class="makeStyles-taskWrapper"
    >
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-attract MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorError"
          >
            0
          </h6>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-service MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            28
          </h6>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-expansion MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            120
          </h6>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-expansion MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            120
          </h6>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-attract MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorError"
          >
            0
          </h6>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-expansion MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorError"
          >
            0
          </h6>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-expansion MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorError"
          >
            0
          </h6>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-service MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <div
            class="makeStyles-substituted"
          >
            <svg
              class="makeStyles-substitutedIcon"
              height="12"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6c2.1524944 0 3.907886 2.5502991 3.9964909 5.7463716L8 12H0l.0035091-.2536284C.0921141 8.5502991 1.8475056 6 4 6zm0-6c1.6568543 0 3 1.3431457 3 3S5.6568543 6 4 6C2.3431458 6 1 4.6568543 1 3s1.3431458-3 3-3z"
                fill="#3A3B3D"
                fill-rule="evenodd"
              />
            </svg>
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              зам
            </p>
          </div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorError"
          >
            0
          </h6>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-expansion MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <div
            class="makeStyles-substituted"
          >
            <svg
              class="makeStyles-substitutedIcon"
              height="12"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6c2.1524944 0 3.907886 2.5502991 3.9964909 5.7463716L8 12H0l.0035091-.2536284C.0921141 8.5502991 1.8475056 6 4 6zm0-6c1.6568543 0 3 1.3431457 3 3S5.6568543 6 4 6C2.3431458 6 1 4.6568543 1 3s1.3431458-3 3-3z"
                fill="#3A3B3D"
                fill-rule="evenodd"
              />
            </svg>
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              зам
            </p>
          </div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorError"
          >
            0
          </h6>
        </div>
      </div>
      <div
        class="MuiPaper-root MuiCard-root makeStyles-task makeStyles-attract MuiPaper-elevation0 MuiPaper-rounded"
      >
        <div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1"
          >
            ООО Ромашка
          </h6>
        </div>
        <div
          class="makeStyles-taskContent"
        >
          <p
            class="MuiTypography-root makeStyles-trigger MuiTypography-body1"
          >
            Наименование триггера
          </p>
          <div
            class="makeStyles-substituted"
          >
            <svg
              class="makeStyles-substitutedIcon"
              height="12"
              width="8"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 6c2.1524944 0 3.907886 2.5502991 3.9964909 5.7463716L8 12H0l.0035091-.2536284C.0921141 8.5502991 1.8475056 6 4 6zm0-6c1.6568543 0 3 1.3431457 3 3S5.6568543 6 4 6C2.3431458 6 1 4.6568543 1 3s1.3431458-3 3-3z"
                fill="#3A3B3D"
                fill-rule="evenodd"
              />
            </svg>
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              зам
            </p>
          </div>
          <h6
            class="MuiTypography-root MuiTypography-subtitle1 MuiTypography-colorTextPrimary"
          >
            120
          </h6>
        </div>
      </div>
    </div>
  </div>
</div>
`;
